policies/tests/disallow-host-namespaces/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: host-namespace-pod
  namespace: tenant-alpha
spec:
  hostPID: true
  hostIPC: true
  hostNetwork: true
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
