policies/tests/disallow-host-namespaces/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: isolated-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
