policies/tests/disallow-host-namespaces/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-namespaces-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-host-namespaces
    rule: deny-host-namespaces
    resource: isolated-pod
    kind: Pod
    result: pass
  - policy: disallow-host-namespaces
    rule: deny-host-namespaces
    resource: host-namespace-pod
    kind: Pod
    result: fail
